# 162-final-project

./: Procfile  README.md  heroku.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.txt
.github/workflows/: sync-backend-to-subtree.yml
app/car_detection/: detect_vehicles.py
app/frame_selection/: select_random_frames.py  utils.py
app/image_enhancement/: enhance_image.py
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  test.txt
backend/app/car_detection/: detect_vehicles.py  utils.py
backend/app/frame_selection/: utils.py
backend/app/image_enhancement/: enhance_image.py
components/: dashboard.tsx  image-analysis.tsx  sidebar.tsx  vehicle-tracking.tsx  video-analysis.tsx
frontend/: .env  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: about-content.tsx  page.tsx
frontend/app/commute/: page.tsx
frontend/app/map/: page.tsx
frontend/app/report/: page.tsx  report-content.tsx
frontend/components/: dashboard.tsx  enhance-image.tsx  footer.tsx  header.tsx  image-analysis.tsx  sidebar.tsx  traffic-map.tsx  traffic-patterns.tsx  video-analysis.tsx
frontend/components/ui/: loading.tsx  slider.tsx  spinner.tsx  tabs.tsx
frontend/hooks/: map-provider.tsx
