[tool.poetry]
name = "162-final-project"
version = "0.1.0"
description = ""
authors = ["Anakin Skywalker Pactores <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
ultralytics = "^8.3.38"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
